feat: remove imports não usados